SHR-707 Add get(id) operation for datasourcemanager API
